@@ -15,6 +15,11 @@
    <Credits>Susan Rich 2003 / GPL</Credits>
    <Categories>audio;misc</Categories>
   </Asset>
+  <Asset file="check_answer.ogg" mimetype="audio/x-ogg">
+   <_Description>check_answer</_Description>
+   <Credits>Susan Rich 2003 / GPL</Credits>
+   <Categories>audio;misc</Categories>
+  </Asset>
   <Asset file="congratulation.ogg" mimetype="audio/x-ogg">
    <_Description>congratulation</_Description>
    <Credits>Susan Rich 2003 / GPL</Credits>
