@@ -1,3 +1,13 @@
+2006-02-25  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/sounds/en/misc/check_answer.ogg: taken from en/finland.ogg. We need to rerecord
+	  finland. Susan, Jim where are you.
+	* boards/sounds/en/misc/gcompris_misc_en.assetml.in:
+	* src/boards/gtans.c: (taninitstart): Fixed a random crash / non functional 
+	on many distrib.
+	* src/boards/gtans.h: cleanup
+	* src/boards/python/electric.py: included a patch from Christian Gagneraud to better handle the rheostat. Created 3 difficulty levels.
+
 2006-02-21  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/python/electric.py: Fixed by Christian Gagneraud. Now the diode is idealized.
